MODIFIED       -> landing-page.scss outline still visible MODIFIED       -> landing-page.js ready is shown in player list BUG            -> Ready State isn set correctly                -> If a player chose a char everyone can press ready

--- a/client/css/landing-page.scss
+++ b/client/css/landing-page.scss
@@ -40,6 +40,9 @@ body {
   transition-duration: 0.15s;
   cursor: pointer;
   outline: none;
+  &:focus {
+    outline: none;
+  }
   &:hover {
     color: black;
   }
